@@ -1,3 +1,7 @@
+2002-07-04  Braden McDaniel  <braden@endoframe.com>
+
+        * src/lookat/lookat.cpp:  Minor code cleanup.
+
 2002-07-03  Braden McDaniel  <braden@endoframe.com>
 
         * src/lookat/lookat.cpp:  Code cleanup; delete the VrmlScene and
